--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
                                                     </span></a>
 
                                                 <ul class="menu-second-sub-mobile uk-nav uk-nav-default" uk-nav>
-                                                    <li><a href="#" class="cat"><img class="trend-icon-nav" src="svg/МАлышам.svg">
-                                                        Ссылка на категорию</a></li>
+                                                    <li><a href="#" class="cat"><img class="trend-icon-nav"
+                                                                src="svg/МАлышам.svg">
+                                                            Ссылка на категорию</a></li>
                                                     <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
                                                             Активное</a></li>
                                                     <li><a href="#"><img class="trend-icon-nav" src="svg/МАлышам.svg">
@@ -805,12 +806,14 @@
                 </div>
 
             </section>
-  <!-- Ценники-->
+            <!-- Ценники-->
             <section class="container-item">
+                <h2 class="uk-text-center">Нормальные цены</h2>
                 <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small"
                     uk-grid>
                     <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-slide-top; delay: 400">
-                        <h4>Нормальные цены</h4>
+                        <h4>Репетиторы профи																	
+                        </h4>
                         <div>Мы установили нормальные цены на максимально высокий уровень репетиторов.</div>
                         <div>Теперь к нам приходят более тысячи довольных учеников каждый месяц.</div>
                         <button class="btn-reviews-pricing btn-reviews-pricing_desctop btn-search-more">
@@ -1055,6 +1058,102 @@
 
 
                 </script>
+
+
+                <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small uk-margin-large-top" uk-grid>
+                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 600">
+                        <h4>Репетиторы магистранты</h4>
+                        <div>Если нужно поддержать знания по предмету, то с этим прекрасно справятся репетиторы магистранты - студенты последних курсов ВУЗов.</div>
+                    </div>
+                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1000">
+                        <div class="pricing-item bordercolor8">
+
+                            <div class="pricing-item_icon bordercolor8"><img
+                                    src="https://cdn.nyutonika.ru/icons/прайс-8.svg" alt="">
+                            </div>
+                            <ul class="pricing-header_top pricing-header_top_hit">
+                                <li>
+                                    Популярный
+                                </li>
+                            </ul>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                                на 8 занятий</div>
+                            <div class="pricing-item_one color22">
+                                <div><span>450</span>руб.</div>
+                                <div>за одно занятие</div>
+                            </div>
+                            <div class="pricing-item_set pricing-item_set_hit">
+                                Стоимость 3600 руб.
+                                <span>Хватит<br>на месяц - полтора</span>
+                            </div>
+                            <div class="pricing-item_button">
+                                <a href="" class="uk-button uk-button-primary button-tree button-color-8">
+                                    Начать бесплатно</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1400">
+                        <div class="pricing-item bordercolor9">
+
+                            <div class="pricing-item_icon bordercolor9"><img class="right"
+                                    src="https://cdn.nyutonika.ru/icons/прайс-9.svg" alt="">
+                            </div>
+                            <ul class="pricing-header_top pricing-header_top_normal">
+                                <li>
+
+                                </li>
+                            </ul>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                                на 64 занятия</div>
+                            <div class="pricing-item_one color23">
+                                <div><span>465</span>руб.</div>
+                                <div>за одно занятие</div>
+                            </div>
+                            <div class="pricing-item_set pricing-item_set_hit">
+                                Стоимость 1860 руб.
+                                <span>Хватит<br>на 2 -3 недели</span>
+                            </div>
+                            <div class="pricing-item_button">
+                                <a href="" class="uk-button uk-button-primary button-tree button-color-9">
+                                    Начать бесплатно</a>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1800">
+                        <div class="pricing-item bordercolor10">
+
+                            <div class="pricing-item_icon  bordercolor10"><img
+                                    src="https://cdn.nyutonika.ru/icons/прайс-10.svg" alt="">
+                            </div>
+                            <ul class="pricing-header_top   pricing-header_top_normal">
+                                <li>
+
+                                </li>
+                            </ul>
+                            <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                                на 1 занятие</div>
+                            <div class="pricing-item_one color24">
+                                <div><span>480</span>руб.</div>
+                                <div>за одно занятие</div>
+                            </div>
+                            <div class="pricing-item_set pricing-item_set_hit">
+
+                                <span>Удобно<br>
+                                    для разовых занятий</span>
+                            </div>
+                            <div class="pricing-item_button">
+                                <a href="" class="uk-button uk-button-primary button-tree button-color-10">
+                                    Начать бесплатно</a>
+                            </div>
+
+                        </div>
+                    </div>
+
+
+                    
+                </div>
             </section>
 
 
