Cогласие без чекбокса

--- a/шаблон — модальное окно с формой.html
+++ b/шаблон — модальное окно с формой.html
@@ -250,10 +250,21 @@
                                 </div>
                                 
                             </div>
+                            
+                            <!--Cогласие без чекбокса -->
+                            <div class="uk-form-controls checkbox-tab feedback-form"><span>Отправляя форму, вы соглашаетесь с <a href="">офертой</a> и
+                                даёте
+                                согласие на обработку ваших персональных данных</span>
+                            </div>
+                            <!-- Конец Cогласие без чекбокса-->  
+
+                             <!--Cогласие с чекбоксом-->
                             <div class="checkbox-tab feedback-form uk-margin-remove-left uk-margin-remove-right">
                                 <input class="uk-checkbox checkbox-tab-item" type="checkbox" required><span>Соглашаюсь с
                                     политикой обработки персональных данных и даю согласие на обработку данных</span>
                             </div>
+                             <!--Конец Cогласие с чекбоксом-->  
+
                             <div class="uk-margin-bottom uk-margin-top">
                                 <button class="button-tree uk-button uk-button-primary uk-width-expand uk-margin-remove" type="submit">Оставить заявку</button>
                             </div>
