--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
 
 
                 <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small uk-margin-large-top" uk-grid>
-                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 600">
+                    <div class="reviews-pricing-item" style="justify-content: flex-start;" uk-scrollspy="cls: uk-animation-scale-up; delay: 600">
                         <h4>Репетиторы магистранты</h4>
                         <div>Если нужно поддержать знания по предмету, то с этим прекрасно справятся репетиторы магистранты - студенты последних курсов ВУЗов.</div>
                     </div>
