Правки по разворачиванию ценников 2

--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
 
                         </div>
                     </div>
-                    <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-slide-top; delay: 1600">
+                    <div class="reviews-pricing-item price-disclosure" uk-scrollspy="cls: uk-animation-slide-top; delay: 1600">
                         <div class="pricing-item bordercolor3">
 
                             <div class="pricing-item_icon  bordercolor3"><img
