--- a/шаблон — страница с ценами.html
+++ b/шаблон — страница с ценами.html
@@ -79,7 +79,7 @@
                                 </ul>
                             </div>
                         </li>
-                        <li class="nav-item"><a href="#">О школе</a></li>
+                        <li class="nav-item"><a href="#">Цены</a></li>
 
 
 
@@ -221,34 +221,329 @@
 
 
 
-            <section class="container-item">
+            <!-- Ценники-->
+        <section class="container-item">
+            <h2 class="uk-text-center">Нормальные цены</h2>
+            <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small"
+                uk-grid>
+                <div class="reviews-pricing-item price-disclosure"
+                    uk-scrollspy="cls: uk-animation-slide-top; delay: 400">
+                    <h4>Репетиторы профи
+                    </h4>
+                    <div>Мы установили нормальные цены на максимально высокий уровень репетиторов.</div>
+                    <div>Теперь к нам приходят более тысячи довольных учеников каждый месяц.</div>
+                    <button class="btn-reviews-pricing btn-reviews-pricing_desctop btn-search-more">
+                        <span>Посмотреть все пакеты</span><span uk-icon="icon: arrow-down; ratio: 1.3"></span></button>
+                </div>
+                <div class="reviews-pricing-item price-disclosure"
+                    uk-scrollspy="cls: uk-animation-slide-top; delay: 800">
+                    <div class="pricing-item bordercolor1">
 
-                И нет сомнений, что сделанные на базе интернет-аналитики выводы освещают чрезвычайно интересные
-                особенности картины в целом, однако конкретные выводы, разумеется, своевременно верифицированы. Следует
-                отметить, что существующая теория влечет за собой процесс внедрения и модернизации существующих
-                финансовых и административных условий. Каждый из нас понимает очевидную вещь: высокое качество
-                позиционных исследований способствует подготовке и реализации кластеризации усилий. Задача организации,
-                в особенности же высокое качество позиционных исследований способствует повышению качества вывода
-                текущих активов. Принимая во внимание показатели успешности, курс на социально-ориентированный
-                национальный проект напрямую зависит от дальнейших направлений развития. Как уже неоднократно упомянуто,
-                тщательные исследования конкурентов представлены в исключительно положительном свете. Также как
-                повышение уровня гражданского сознания позволяет выполнить важные задания по разработке укрепления
-                моральных ценностей. Как принято считать, сторонники тоталитаризма в науке лишь добавляют фракционных
-                разногласий и превращены в посмешище, хотя само их существование приносит несомненную пользу обществу.
-                Господа, постоянный количественный рост и сфера нашей активности однозначно определяет каждого участника
-                как способного принимать собственные решения касаемо как самодостаточных, так и внешне зависимых
-                концептуальных решений. Однозначно, независимые государства, вне зависимости от их уровня, должны быть
-                рассмотрены исключительно в разрезе маркетинговых и финансовых предпосылок. Но курс на
-                социально-ориентированный национальный проект предопределяет высокую востребованность форм воздействия!
-                С другой стороны, выбранный нами инновационный путь предопределяет высокую востребованность
-                кластеризации усилий! В своём стремлении улучшить пользовательский опыт мы упускаем, что стремящиеся
-                вытеснить традиционное производство, нанотехнологии освещают чрезвычайно интересные особенности картины
-                в целом, однако конкретные выводы, разумеется, указаны как претенденты на роль ключевых факторов. Вот
-                вам яркий пример современных тенденций — консультация с широким активом позволяет выполнить важные
-                задания по разработке анализа существующих паттернов поведения. Как уже неоднократно упомянуто, действия
-                представителей оппозиции, превозмогая сложившуюся непростую экономическую ситуацию, представлены в
-                исключительно положительном свете.
-            </section>
+                        <div class="pricing-item_icon bordercolor1"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-1.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top pricing-header_top_hit">
+                            <li>
+                                Популярный
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 8 занятий</div>
+                        <div class="pricing-item_one color10">
+                            <div><span>790</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 6320 руб.
+                            <span>Хватит<br>на месяц - полтора</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-1">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item price-disclosure"
+                    uk-scrollspy="cls: uk-animation-slide-top; delay: 1200">
+                    <div class="pricing-item bordercolor2">
+
+                        <div class="pricing-item_icon bordercolor2"><img class="right"
+                                src="https://cdn.nyutonika.ru/icons/прайс-2.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 64 занятия</div>
+                        <div class="pricing-item_one color20">
+                            <div><span>690</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 44160 руб.
+                            <span>Хватит<br>примерно на год</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-2">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item price-disclosure"
+                    uk-scrollspy="cls: uk-animation-slide-top; delay: 1600">
+                    <div class="pricing-item bordercolor3">
+
+                        <div class="pricing-item_icon  bordercolor3"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-3.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top   pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 1 занятие</div>
+                        <div class="pricing-item_one color11">
+                            <div><span>990</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+
+                            <span>Удобно<br>
+                                для разовых занятий</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-3">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+
+
+                <div class="reviews-pricing-item price-disclosure">
+                    <div class="pricing-item bordercolor4">
+
+                        <div class="pricing-item_icon bordercolor4"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-4.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top  pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 4 занятия</div>
+                        <div class="pricing-item_one color21">
+                            <div><span>890</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 3560 руб.
+                            <span>Хватит<br>на две-три недели</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-4">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item price-disclosure">
+                    <div class="pricing-item bordercolor5">
+
+                        <div class="pricing-item_icon bordercolor5"><img class="right"
+                                src="https://cdn.nyutonika.ru/icons/прайс-5.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top  pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 16 занятий</div>
+                        <div class="pricing-item_one color3">
+                            <div><span>750</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 12000 руб.
+                            <span>Хватит<br>на два-три месяца</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-5">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item price-disclosure">
+                    <div class="pricing-item bordercolor6">
+
+                        <div class="pricing-item_icon bordercolor6"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-6.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top  pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 32 занятия</div>
+                        <div class="pricing-item_one color5">
+                            <div><span>730</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 23360 руб.
+                            <span>Хватит<br>на четыре-пять месяцев</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-6">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item price-disclosure">
+                    <div class="pricing-item bordercolor7">
+
+                        <div class="pricing-item_icon bordercolor7"><img class="right"
+                                src="https://cdn.nyutonika.ru/icons/прайс-7.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top  pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 48 занятий</div>
+                        <div class="pricing-item_one color4">
+                            <div><span>710</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 34080 руб.
+                            <span>Хватит<br>на шесть-восемь месяцев</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-7">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="btn-reviews-pricing_mobile">
+                    <button class="btn-reviews-pricing btn-search-more btn-search-more_mobile">
+                        <span>Посмотреть все пакеты</span><span uk-icon="icon: arrow-down; ratio: 1.3"></span></button>
+                    <button class="btn-reviews-pricing btn-search-more_mobileclouse">
+                        <span>Cкрыть пакеты</span><span uk-icon="icon:  arrow-up; ratio: 1.3"></span></button>
+                </div>
+            </div>
+
+
+            <div class="pricing pricing-simple uk-child-width-1-2@s uk-child-width-1-2@m uk-child-width-1-4@l uk-grid-small uk-margin-large-top"
+                uk-grid>
+                <div class="reviews-pricing-item" style="justify-content: flex-start;"
+                    uk-scrollspy="cls: uk-animation-scale-up; delay: 600">
+                    <h4>Репетиторы магистранты</h4>
+                    <div>Если нужно поддержать знания по предмету, то с этим прекрасно справятся репетиторы
+                        магистранты - студенты последних курсов ВУЗов.</div>
+                </div>
+                <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1000">
+                    <div class="pricing-item bordercolor8">
+
+                        <div class="pricing-item_icon bordercolor8"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-8.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top pricing-header_top_hit">
+                            <li>
+                                Популярный
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 8 занятий</div>
+                        <div class="pricing-item_one color22">
+                            <div><span>450</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 3600 руб.
+                            <span>Хватит<br>на месяц - полтора</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-8">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1400">
+                    <div class="pricing-item bordercolor9">
+
+                        <div class="pricing-item_icon bordercolor9"><img class="right"
+                                src="https://cdn.nyutonika.ru/icons/прайс-9.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 64 занятия</div>
+                        <div class="pricing-item_one color23">
+                            <div><span>465</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+                            Стоимость 1860 руб.
+                            <span>Хватит<br>на 2 -3 недели</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-9">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reviews-pricing-item" uk-scrollspy="cls: uk-animation-scale-up; delay: 1800">
+                    <div class="pricing-item bordercolor10">
+
+                        <div class="pricing-item_icon  bordercolor10"><img
+                                src="https://cdn.nyutonika.ru/icons/прайс-10.svg" alt="">
+                        </div>
+                        <ul class="pricing-header_top   pricing-header_top_normal">
+                            <li>
+
+                            </li>
+                        </ul>
+                        <div class="pricing-item_title pricing-item_title_hit">Пакет<br>
+                            на 1 занятие</div>
+                        <div class="pricing-item_one color24">
+                            <div><span>480</span>руб.</div>
+                            <div>за одно занятие</div>
+                        </div>
+                        <div class="pricing-item_set pricing-item_set_hit">
+
+                            <span>Удобно<br>
+                                для разовых занятий</span>
+                        </div>
+                        <div class="pricing-item_button">
+                            <a href="" class="uk-button uk-button-primary button-tree button-color-10">
+                                Начать бесплатно</a>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+            </div>
+        </section>
         </main>
         <footer class="footer">
             <div class="container">
