--- a/шаблон — страница с ценами.html
+++ b/шаблон — страница с ценами.html
@@ -160,8 +160,7 @@
                                         </ul>
 
                                     </li>
-                                    <li class="nav-item uk-parent"><a href="#">О школе <span
-                                                class="uk-nav-parent-icon icon-menu-one"></span></a></li>
+                                    <li class="nav-item uk-parent"><a href="#">Цены</a></li>
 
                                     <li class="uk-nav-divider nav-line"></li>
                                     <li>
